[gd_scene load_steps=6 format=3 uid="uid://cg3k045guh3ha"]

[ext_resource type="Script" path="res://scripts/end_screen.gd" id="1_vv31f"]
[ext_resource type="FontFile" uid="uid://dkm8unjw64txc" path="res://assets/fonts/morning_breeze/MorningBreeze-Light.otf" id="2_sf441"]
[ext_resource type="FontFile" uid="uid://buqhriudoc8ou" path="res://assets/fonts/Lacquer-Regular.ttf" id="2_v8ytp"]
[ext_resource type="AudioStream" uid="uid://b48juf0xcylqx" path="res://assets/sounds/Background/Highscore board sound.mp3" id="3_14r8a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l6527"]
bg_color = Color(0, 0, 0, 1)

[node name="EndScreen" type="Control" node_paths=PackedStringArray("run_time_display", "name_input")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vv31f")
run_time_display = NodePath("Panel/MarginContainer/CenterContainer/RunTimeDisplay")
name_input = NodePath("Panel/MarginContainer/VBoxContainer/NameInput")

[node name="Panel" type="Panel" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l6527")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 50

[node name="CenterContainer" type="CenterContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="RunTimeDisplay" type="Label" parent="Panel/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_v8ytp")
theme_override_font_sizes/font_size = 250
text = "Your score: 10050"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 25

[node name="NameInput" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_sf441")
theme_override_font_sizes/font_size = 160
placeholder_text = "Enter your name"
max_length = 16

[node name="SaveButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("2_sf441")
theme_override_font_sizes/font_size = 160
text = "Save"

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_14r8a")
volume_db = -10.0

[connection signal="text_submitted" from="Panel/MarginContainer/VBoxContainer/NameInput" to="." method="_on_name_input_text_submitted"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
